<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:paddingTop="0dp"
            android:onClick="MainClick"
            app:srcCompat="@drawable/vk_ava_"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/go_vk1"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="MainClick"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/vk_name_group"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/go_vk2"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="MainClick"
            android:text="@string/vk_link"
            android:id="@+id/go_vk3"/>
</LinearLayout>