<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

    <ImageButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            android:id="@+id/BtnInfo"
            app:layout_constraintBottom_toBottomOf="@+id/input_text"
            android:layout_marginBottom="96dp"
            app:layout_constraintStart_toEndOf="@+id/input_text"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.768"
            app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="160dp"
            android:layout_height="89dp"
            android:hint="@string/Введите_текст"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.446"
            android:id="@+id/input_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"/>
    <EditText
            android:layout_width="160dp"
            android:layout_height="99dp"
            android:hint="@string/Введите_Пароль"
            app:layout_constraintTop_toBottomOf="@+id/input_text"
            app:layout_constraintStart_toStartOf="@+id/input_text"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@+id/input_text"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/password"/>
    <TextView
            android:layout_width="160dp"
            android:layout_height="95dp"
            android:gravity="center"
            android:hint="@string/Ваш_шифр"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            android:layout_marginTop="15dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/secret_text"/>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/encrypt"
            android:textAllCaps="false"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/BtnEncrypt"
            app:layout_constraintTop_toBottomOf="@+id/secret_text"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"/>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/decrypt"
            android:textAllCaps="false"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/BtnDecrypt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            app:layout_constraintTop_toBottomOf="@+id/secret_text"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/BtnEncrypt"
            app:layout_constraintHorizontal_bias="0.93"/>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="Скопировать"
            android:textAllCaps="false"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:onClick="MainClick"
            android:id="@+id/BtnCopyText"
            app:layout_constraintStart_toStartOf="@+id/BtnEncrypt"
            app:layout_constraintEnd_toEndOf="@+id/BtnEncrypt"
            app:layout_constraintTop_toBottomOf="@+id/BtnEncrypt"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="Вставить"
            android:textAllCaps="false"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:onClick="MainClick"
            android:id="@+id/BtnPasteText"
            app:layout_constraintEnd_toEndOf="@+id/BtnDecrypt"
            app:layout_constraintStart_toStartOf="@+id/BtnDecrypt"
            app:layout_constraintBottom_toBottomOf="@+id/BtnCopyText"/>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="Очистить"
            android:textAllCaps="false"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:onClick="MainClick"
            android:id="@+id/BtnClearText"
            app:layout_constraintStart_toStartOf="@+id/BtnCopyText"
            app:layout_constraintEnd_toEndOf="@+id/BtnPasteText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BtnCopyText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.1"/>

</androidx.constraintlayout.widget.ConstraintLayout>