<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.Ciphers.RSA">

    <ImageButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            android:onClick="RSA_OnClick"
            android:id="@+id/BtnInfo"
            app:layout_constraintStart_toStartOf="@+id/input_text"
            app:layout_constraintBottom_toTopOf="@+id/input_text"
            android:layout_marginBottom="20dp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/Введите_текст"
            android:id="@+id/input_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.25"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Введите_Пароль"
            android:id="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/input_text"
            app:layout_constraintTop_toBottomOf="@+id/input_text"
            app:layout_constraintEnd_toEndOf="@+id/input_text"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:hint="@string/Ваш_шифр"
            android:id="@+id/secret_text"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.0"/>
    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secret_text"
            app:layout_constraintStart_toStartOf="@+id/secret_text"
            app:layout_constraintEnd_toEndOf="@+id/secret_text"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0">
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/encrypt"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="RSA_OnClick"
                android:id="@+id/BtnEncrypt"
                android:layout_column="0"
        />
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/decrypt"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="RSA_OnClick"
                android:id="@+id/BtnDecrypt"
                android:layout_column="2"/>
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Скопировать"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="MainClick"
                tools:ignore="OnClick"
                android:id="@+id/BtnCopyText"
                android:layout_column="0"/>
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Очистить"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="MainClick"
                tools:ignore="OnClick"
                android:id="@+id/BtnClearText"
                android:layout_column="1"/>
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Вставить"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="MainClick"
                tools:ignore="OnClick"
                android:id="@+id/BtnPasteText"
                android:layout_column="2"/>


        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Публичный"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="RSA_OnClick"
                android:id="@+id/BtnPublicKey"
                android:layout_column="0"/>
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Приватный"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="RSA_OnClick"
                android:id="@+id/BtnPrivateKey"
                android:layout_column="2"/>
    </GridLayout>
    <include layout="@layout/ads_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>