<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.Ciphers.AES">

    <ImageButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            android:layout_y="40dp"
            android:layout_x="330dp"
            android:id="@+id/BtnInfo"
            app:layout_constraintStart_toStartOf="@+id/input_text"
            app:layout_constraintBottom_toBottomOf="@+id/input_text"
            android:layout_marginBottom="70dp"
            app:layout_constraintEnd_toEndOf="@+id/input_text"
            app:layout_constraintHorizontal_bias="0.98"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/Введите_текст"
            android:layout_y="40dp"
            android:layout_x="122dp"
            android:id="@+id/input_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Введите_Пароль"
            android:layout_y="144dp"
            android:layout_x="122dp"
            android:id="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/input_text"
            app:layout_constraintStart_toStartOf="@+id/input_text"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/input_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"/>

    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_y="220dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password">

        <RadioButton
                android:id="@+id/radio_128"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="128"
                android:checked="true"
        />
        <RadioButton
                android:id="@+id/radio_192"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="192"
        />
        <RadioButton
                android:id="@+id/radio_256"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="256"
        />
    </RadioGroup>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/Ваш_шифр"
            android:layout_y="285dp"
            android:layout_x="123dp"
            android:id="@+id/secret_text"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:layout_marginTop="20dp"/>

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/secret_text"
            app:layout_constraintStart_toStartOf="@+id/secret_text"
            app:layout_constraintEnd_toEndOf="@+id/secret_text"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0">
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/encrypt"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/BtnEncrypt"
                android:layout_column="0"
        />
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/decrypt"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/BtnDecrypt"
                android:layout_column="2"
        />
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Скопировать"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="MainClick"
                android:id="@+id/BtnCopyText"
                tools:ignore="OnClick"
                android:layout_column="0"
        />
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Очистить"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="MainClick"
                android:id="@+id/BtnClearText"
                tools:ignore="OnClick"
                android:layout_column="1"

        />
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Вставить"
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="MainClick"
                android:id="@+id/BtnPasteText"
                tools:ignore="OnClick"
                android:layout_column="2"
        />
    </GridLayout>
    <include layout="@layout/ads_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>